quick fix for mobile causing by overflow

--- a/SCSS/components/_banner.scss
+++ b/SCSS/components/_banner.scss
@@ -1,5 +1,5 @@
 .banner {
-
+    overflow: hidden;
     @media screen and (min-width: 768px) {
         display: flex;
         align-content: center;
