--- a/css/main.css
+++ b/css/main.css
@@ -743,6 +743,10 @@ a {
   }
 }
 
+.banner {
+  overflow: hidden;
+}
+
 @media screen and (min-width: 768px) {
   .banner {
     display: -webkit-box;
